# ros2_redundancy

./: CMakeLists.txt  README.md  package.xml
diagrams/: redundant.drawio
launch/: bringup.launch.py  test_command.launch.py
msg/: RedundancyStatus.msg  Status.msg
scripts/: main.py  main_node.py  primary.py  primary_node.py  redundant.py  redundant_node.py  tools_lib.py
