<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_redundancy</name>
  <version>0.0.0</version>
  <description>Package for handling redundancy in ROS1 and ROS2</description>
  <maintainer email="vboxuser@todo.todo">vboxuser</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies for both ROS1 and ROS2 -->
  
  <!-- Buildtool dependencies -->
  <!-- For ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <!-- For ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <!-- Dependencies shared by ROS1 and ROS2 -->
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <!-- ROS2-specific dependencies -->
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">rclpy</depend>
  <depend condition="$ROS_VERSION == 2">rosidl_default_generators</depend>
  <build_depend condition="$ROS_VERSION == 2">Python3</build_depend>
  <exec_depend condition="$ROS_VERSION == 2">Python3</exec_depend>

  <!-- ROS1-specific dependencies -->
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <!-- Testing dependencies for ROS2 -->
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <export>
    <!-- Build types for ROS1 and ROS2 -->
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>
</package>
